--- a/app/src/main/res/layout/fragment_week_star_master.xml
+++ b/app/src/main/res/layout/fragment_week_star_master.xml
@@ -1,20 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <RelativeLayout
-        android:layout_width="238dp"
+        android:id="@+id/rl_week_star_master"
+        android:layout_width="160dp"
         android:layout_height="33dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="10dp"
-        android:background="@drawable/shape_tab_background">
+        android:background="@drawable/shape_tab_background"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <android.support.design.widget.TabLayout
             android:id="@+id/tab_week_star"
-            android:layout_width="235dp"
+            android:layout_width="157dp"
             android:layout_height="30dp"
             android:layout_centerInParent="true"
             android:background="@drawable/shape_tab_background"
@@ -24,9 +28,21 @@
             app:tabTextColor="@color/tran_black5" />
     </RelativeLayout>
 
+    <ImageView
+        android:id="@+id/iv_rule_week_star"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:src="@drawable/ic_rule_week_star"
+        app:layout_constraintBottom_toBottomOf="@id/rl_week_star_master"
+        app:layout_constraintLeft_toRightOf="@id/rl_week_star_master"
+        app:layout_constraintTop_toTopOf="@id/rl_week_star_master" />
+
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager_week_star"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/rl_week_star_master" />
 
-</LinearLayout>
+</android.support.constraint.ConstraintLayout>
