--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -464,6 +464,18 @@
                         android:visibility="gone" />
 
                     <TextView
+                        android:id="@+id/tv_anchor_wish_live"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/bg_anchor_wish_live"
+                        android:gravity="center_vertical"
+                        android:paddingLeft="30dp"
+                        android:singleLine="true"
+                        android:textColor="#f9f9f9"
+                        android:textSize="12sp"
+                        android:visibility="gone" />
+
+                    <TextView
                         android:id="@+id/tv_red_bag_run_way"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
