--- a/app/src/main/res/layout/fragment_anchor_wish.xml
+++ b/app/src/main/res/layout/fragment_anchor_wish.xml
@@ -19,8 +19,7 @@
         android:id="@+id/iv_gift"
         android:layout_width="36dp"
         android:layout_height="35.5dp"
-        android:layout_marginTop="4dp"
-        android:background="@drawable/bg_image_anchor_wish" />
+        android:layout_marginTop="4dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
