--- a/app/src/main/res/layout/dialog_personal_info.xml
+++ b/app/src/main/res/layout/dialog_personal_info.xml
@@ -12,8 +12,7 @@
         android:layout_width="370dp"
         android:layout_height="330dp"
         android:layout_gravity="center"
-        android:layout_marginBottom="50dp"
-        android:background="@drawable/bg_civilian">
+        android:layout_marginBottom="50dp">
 
         <ImageView
             android:id="@+id/iv_bg_personal"
@@ -29,10 +28,10 @@
             android:id="@+id/relativeLayout2"
             android:layout_width="257dp"
             android:layout_height="245dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
             android:layout_marginEnd="8dp"
+            android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
+            android:layout_marginStart="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.505"
@@ -45,8 +44,8 @@
                 android:id="@+id/btn_personal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="7dp"
                 android:layout_marginLeft="7dp"
+                android:layout_marginStart="7dp"
                 android:layout_marginTop="7dp"
                 android:background="@null"
                 android:src="@drawable/ic_personal"
@@ -57,8 +56,8 @@
                 android:id="@+id/btn_close"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
-                android:layout_marginTop="5dp"
                 android:layout_marginRight="7dp"
+                android:layout_marginTop="5dp"
                 android:background="@null"
                 android:src="@drawable/ic_close_per"
                 app:layout_constraintRight_toRightOf="parent"
@@ -68,8 +67,8 @@
                 android:id="@+id/iv_user_avatar"
                 android:layout_width="52dp"
                 android:layout_height="52dp"
-                android:layout_marginTop="33dp"
                 android:layout_marginBottom="8dp"
+                android:layout_marginTop="33dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.494"
@@ -81,11 +80,11 @@
                 android:id="@+id/tv_ranking"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginTop="32dp"
                 android:layout_marginEnd="8dp"
+                android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="32dp"
                 android:background="@drawable/ic_ranking"
                 android:gravity="center"
                 android:maxEms="10"
@@ -151,8 +150,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="17dp"
                 android:layout_marginLeft="10dp"
-                android:layout_marginTop="12dp"
                 android:layout_marginRight="10dp"
+                android:layout_marginTop="12dp"
                 android:ellipsize="end"
                 android:gravity="center"
                 android:maxEms="20"
@@ -183,9 +182,9 @@
                     android:id="@+id/linearLayout2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
                     android:layout_marginLeft="10dp"
-                    android:layout_marginRight="10dp">
+                    android:layout_marginRight="10dp"
+                    android:orientation="horizontal">
 
                     <RelativeLayout
                         android:id="@+id/rl_follow"
@@ -199,14 +198,14 @@
                             android:id="@+id/tv_follow"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textSize="14sp"
-                            android:layout_centerInParent="true"/>
+                            android:layout_centerInParent="true"
+                            android:textSize="14sp" />
 
                         <View
                             android:layout_width="1dp"
                             android:layout_height="20dp"
-                            android:background="@color/tran_grey2"
-                            android:layout_alignParentRight="true"/>
+                            android:layout_alignParentRight="true"
+                            android:background="@color/tran_grey2" />
                     </RelativeLayout>
 
                     <RelativeLayout
@@ -226,8 +225,8 @@
                         <View
                             android:layout_width="1dp"
                             android:layout_height="20dp"
-                            android:background="@color/tran_grey2"
-                            android:layout_alignParentRight="true"/>
+                            android:layout_alignParentRight="true"
+                            android:background="@color/tran_grey2" />
                     </RelativeLayout>
 
                     <RelativeLayout
@@ -241,16 +240,16 @@
                             android:id="@+id/tv_private_chat"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_centerInParent="true"
                             android:text="私信"
                             android:textColor="@color/tran_black2"
-                            android:textSize="14sp"
-                            android:layout_centerInParent="true" />
+                            android:textSize="14sp" />
 
                         <View
                             android:layout_width="1dp"
                             android:layout_height="20dp"
-                            android:background="@color/tran_grey2"
-                            android:layout_alignParentRight="true"/>
+                            android:layout_alignParentRight="true"
+                            android:background="@color/tran_grey2" />
                     </RelativeLayout>
 
 
@@ -275,12 +274,12 @@
                 android:id="@+id/btn_buy_royal"
                 android:layout_width="69dp"
                 android:layout_height="28dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="4dp"
-                android:layout_marginRight="4dp"
                 android:layout_marginBottom="8dp"
+                android:layout_marginEnd="4dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="4dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
                 android:background="@null"
                 android:src="@drawable/ic_buy_royal"
                 android:visibility="gone"
