--- a/app/src/main/res/layout/pull_refresh_layout.xml
+++ b/app/src/main/res/layout/pull_refresh_layout.xml
@@ -47,18 +47,15 @@
         android:layout_centerInParent="true"
         android:orientation="vertical"
         android:paddingBottom="50dp"
-        android:visibility="gone">
+        android:visibility="visible">
 
         <ProgressBar
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_centerInParent="true" />
+            android:layout_centerInParent="true"
+            android:indeterminateTint="#FFCF2D" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="加载中..." />
+
     </LinearLayout>
 
 
