--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
+    android:gravity="center_horizontal"
     android:orientation="vertical">
 
     <include layout="@layout/white_toolbar" />
+
+    <include layout="@layout/divider_shawdow_white" />
 
     <ImageView
         android:id="@+id/iv_icon"
@@ -12,27 +16,78 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/toolbar"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="60dp"
-        android:src="@drawable/login_logo1" />
-
-    <TextView
-        android:id="@+id/tv_home"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/iv_icon"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="38dp"
-        android:textColor="#323232"
-        android:textSize="17sp" />
+        android:layout_marginTop="63dp"
+        android:src="@drawable/logo_about_us" />
 
     <TextView
         android:id="@+id/tv_version_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="60dp"
-        android:textColor="#646464"
-        android:textSize="17sp" />
+        android:layout_marginTop="12dp"
+        android:textColor="#70000000"
+        android:textSize="12sp" />
 
-</RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="35dp"
+        android:background="@drawable/bg_shawdow_deep"
+        android:orientation="vertical">
+
+        <RelativeLayout
+            android:id="@+id/rl_yonghu"
+            android:layout_width="wrap_content"
+            android:layout_height="49.5dp">
+
+            <TextView
+                style="@style/about_us_option_left_text"
+                android:text="萌比直播用户协议" />
+
+            <TextView
+                style="@style/about_us_option_right_text"
+                android:ellipsize="end"
+                android:gravity="end|center_vertical"
+                android:singleLine="true" />
+        </RelativeLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="12dp"
+            android:background="#10000000" />
+
+        <RelativeLayout
+            android:id="@+id/rl_tiaoli"
+            android:layout_width="wrap_content"
+            android:layout_height="49.5dp">
+
+            <TextView
+                style="@style/about_us_option_left_text"
+                android:text="主播直播规范条例" />
+
+            <TextView
+                style="@style/about_us_option_right_text"
+                android:gravity="end|center_vertical"
+                android:singleLine="true" />
+        </RelativeLayout>
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:gravity="bottom"
+        android:text="鄂网文【2018】5068-138号   鄂ICP备18004630号-1"
+        android:textColor="#40000000"
+        android:textSize="10sp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="26dp"
+        android:text="© 2018 武汉钟灵网络科技有限公司 版权所有"
+        android:textColor="#40000000"
+        android:textSize="10sp" />
+</LinearLayout>
