--- a/app/src/main/res/layout/activity_follow.xml
+++ b/app/src/main/res/layout/activity_follow.xml
@@ -39,7 +39,7 @@
     <include layout="@layout/divider_shawdow_white" />
 
     <com.scwang.smartrefresh.layout.SmartRefreshLayout
-        android:id="@+id/refresh_layout"
+        android:id="@+id/refresh_layout_follow"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -48,13 +48,13 @@
             android:layout_height="match_parent">
 
             <android.support.v7.widget.RecyclerView
-                android:id="@+id/recycler"
+                android:id="@+id/recycler_follow"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:overScrollMode="never" />
 
             <android.support.v7.widget.RecyclerView
-                android:id="@+id/recommend_recycler"
+                android:id="@+id/recommend_recycler_follow"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:overScrollMode="never"
