--- a/app/src/main/res/layout/fragment_find.xml
+++ b/app/src/main/res/layout/fragment_find.xml
@@ -6,19 +6,36 @@
     android:background="#fdfdfd"
     android:orientation="vertical">
 
-    <RelativeLayout
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="44dp">
+        android:layout_height="46dp"
+        android:background="@color/white"
+        android:minHeight="46dp"
+        app:contentInsetLeft="0dp">
 
         <TextView
+            android:id="@+id/tv_toolbar_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
+            android:layout_gravity="center"
             android:text="发现"
-            android:textColor="@color/black"
-            android:textSize="17sp"
+            android:textColor="@color/text_view"
+            android:textSize="19sp"
             android:textStyle="bold" />
-    </RelativeLayout>
+
+        <TextView
+            android:id="@+id/tv_toolbar_menu_text"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="right"
+            android:layout_marginRight="17dp"
+            android:gravity="center"
+            android:textColor="#ff2b3f"
+            android:textSize="15sp" />
+
+
+    </android.support.v7.widget.Toolbar>
 
     <include layout="@layout/divider_shawdow_white" />
 
@@ -76,9 +93,9 @@
             android:id="@+id/rl_find_task"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_marginTop="20dp"
             android:layout_marginLeft="7dp"
             android:layout_marginRight="7dp"
+            android:layout_marginTop="20dp"
             android:background="@drawable/shape_radius_five">
 
             <ImageView
@@ -125,9 +142,9 @@
             android:id="@+id/rl_find_prop"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_marginTop="20dp"
             android:layout_marginLeft="7dp"
             android:layout_marginRight="7dp"
+            android:layout_marginTop="20dp"
             android:background="@drawable/shape_radius_five">
 
             <ImageView
@@ -174,9 +191,9 @@
             android:id="@+id/rl_find_recharge"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_marginTop="20dp"
             android:layout_marginLeft="7dp"
             android:layout_marginRight="7dp"
+            android:layout_marginTop="20dp"
             android:background="@drawable/shape_radius_five">
 
             <ImageView
