--- a/app/src/main/res/layout/headtip_msg.xml
+++ b/app/src/main/res/layout/headtip_msg.xml
@@ -1,17 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
     android:orientation="vertical">
 
-    <TextView
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="44dp"
-        android:gravity="center"
-        android:text="消息中心"
-        android:textColor="@color/text_view"
-        android:textSize="19sp"
-        android:textStyle="bold" />
+        android:layout_height="46dp"
+        android:background="@color/white"
+        android:minHeight="46dp"
+        app:contentInsetLeft="0dp">
+
+        <TextView
+            android:id="@+id/tv_toolbar_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="消息中心"
+            android:textColor="@color/text_view"
+            android:textSize="19sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/tv_toolbar_menu_text"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="right"
+            android:layout_marginRight="17dp"
+            android:gravity="center"
+            android:textColor="#ff2b3f"
+            android:textSize="15sp" />
+
+
+    </android.support.v7.widget.Toolbar>
 
 </LinearLayout>
