live no money todo

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,7 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="padding_12">12dp</dimen>
     <!-- font size -->
     <dimen name="font_size_52px">26sp</dimen>
     <dimen name="font_size_50px">25sp</dimen>
