--- a/app/src/main/res/layout/activity_pkrecord.xml
+++ b/app/src/main/res/layout/activity_pkrecord.xml
@@ -182,7 +182,7 @@
                 android:layout_height="match_parent"
                 android:gravity="center"
                 android:orientation="vertical"
-                android:visibility="gone">
+                android:visibility="visible">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -206,15 +206,34 @@
                         android:textSize="14sp" />
                 </LinearLayout>
 
-                <TextView
-                    android:id="@+id/tv_save_black_room"
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="18dp"
-                    android:background="@drawable/bg_button_black_room"
-                    android:text="解救主播"
-                    android:textColor="#c40800"
-                    android:textSize="12sp" />
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/tv_save_black_room"
+                        android:layout_width="110dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="20dp"
+                        android:background="@drawable/bg_button_black_room"
+                        android:gravity="center"
+                        android:text="解救主播"
+                        android:textColor="#c40800"
+                        android:textSize="12sp" />
+
+                    <TextView
+                        android:id="@+id/tv_card_black_room"
+                        android:layout_width="110dp"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/bg_button2_black_room"
+                        android:gravity="center"
+                        android:text="使用解救卡"
+                        android:textColor="#c40800"
+                        android:textSize="12sp" />
+                </LinearLayout>
+
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
