--- a/app/src/main/res/layout/activity_login_new.xml
+++ b/app/src/main/res/layout/activity_login_new.xml
@@ -8,169 +8,129 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
         android:orientation="vertical">
 
-        <include layout="@layout/layout_title" />
+        <include layout="@layout/white_toolbar" />
 
         <include layout="@layout/divider_shawdow_white" />
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="20dp"
-            android:src="@drawable/login_logo" />
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="170dp"
-            android:layout_marginTop="30dp">
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="33dp"
+            android:layout_marginRight="42dp"
+            android:layout_marginTop="30dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
-            <com.whzl.mengbi.ui.widget.view.ShadowContainer
+            <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                app:containerCornerRadius="20dp"
-                app:containerDeltaLength="5dp"
-                app:containerShadowColor="@color/font_color_53"
-                app:containerShadowRadius="5dp">
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/ic_login_phone" />
 
-                <LinearLayout
-                    android:layout_width="300dp"
-                    android:layout_height="145dp"
-                    android:background="@drawable/bg_login_round"
-                    android:orientation="vertical">
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="20dp"
-                        android:orientation="horizontal">
+            <EditText
+                android:id="@+id/et_phone"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="13dp"
+                android:layout_weight="1"
+                android:background="@null"
+                android:gravity="center_vertical"
+                android:hint="@string/phone_number_hint"
+                android:inputType="phone"
+                android:maxLength="13"
+                android:textColorHint="#30000000"
+                android:textSize="15sp" />
 
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:layout_marginLeft="33dp"
-                            android:src="@drawable/ic_login_phone" />
+            <ImageButton
+                android:id="@+id/ib_clean_phone"
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:background="@drawable/ic_search_close"
+                android:visibility="gone" />
+        </LinearLayout>
 
-                        <LinearLayout
-                            android:layout_width="207dp"
-                            android:layout_height="30dp"
-                            android:layout_marginLeft="10dp"
-                            android:background="@drawable/login_edit_text_bg"
-                            android:gravity="center_vertical"
-                            android:orientation="horizontal">
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginLeft="26.5dp"
+            android:layout_marginRight="28.5dp"
+            android:layout_marginTop="5dp"
+            android:background="#f0f0f0" />
 
-                            <ImageView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center_vertical"
-                                android:layout_marginLeft="13dp"
-                                android:src="@drawable/ic_login_red" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="33dp"
+            android:layout_marginRight="42dp"
+            android:layout_marginTop="24dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
-                            <EditText
-                                android:id="@+id/et_phone"
-                                android:layout_width="0dp"
-                                android:layout_height="match_parent"
-                                android:layout_marginLeft="10dp"
-                                android:layout_weight="1"
-                                android:background="@null"
-                                android:gravity="center_vertical"
-                                android:hint="@string/phone_number_hint"
-                                android:inputType="phone"
-                                android:maxLength="11"
-                                android:textColorHint="#B9B9B9"
-                                android:textSize="13sp" />
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/ic_login_psw" />
 
-                            <ImageButton
-                                android:id="@+id/ib_clean_phone"
-                                android:layout_width="15dp"
-                                android:layout_height="15dp"
-                                android:layout_marginRight="7dp"
-                                android:background="@drawable/ic_search_close"
-                                android:visibility="gone" />
-                        </LinearLayout>
-                    </LinearLayout>
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="14dp"
-                        android:orientation="horizontal">
+            <EditText
+                android:id="@+id/et_password"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="13dp"
+                android:layout_weight="1"
+                android:background="@null"
+                android:hint="@string/password_hint"
+                android:maxLength="16"
+                android:textColorHint="#30000000"
+                android:textSize="15sp" />
 
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:layout_marginLeft="33dp"
-                            android:src="@drawable/ic_login_psw" />
+            <ImageView
+                android:id="@+id/ib_clean_psw"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:src="@drawable/selector_login_clean_psw"
+                android:visibility="gone" />
+        </LinearLayout>
 
-                        <LinearLayout
-                            android:layout_width="207dp"
-                            android:layout_height="30dp"
-                            android:layout_gravity="center_horizontal"
-                            android:layout_marginLeft="10dp"
-                            android:background="@drawable/login_edit_text_bg"
-                            android:gravity="center_vertical"
-                            android:orientation="horizontal">
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginLeft="26.5dp"
+            android:layout_marginRight="28.5dp"
+            android:layout_marginTop="5dp"
+            android:background="#f0f0f0" />
 
-                            <ImageView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginLeft="15dp"
-                                android:src="@drawable/ic_login_yellow" />
+        <TextView
+            android:id="@+id/tv_forget_psw"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_marginRight="36dp"
+            android:layout_marginTop="16dp"
+            android:text="忘记密码?"
+            android:textColor="#ebc852"
+            android:textSize="12sp" />
 
-                            <EditText
-                                android:id="@+id/et_password"
-                                android:layout_width="0dp"
-                                android:layout_height="match_parent"
-                                android:layout_gravity="center_vertical"
-                                android:layout_marginLeft="10dp"
-                                android:layout_weight="1"
-                                android:background="@null"
-                                android:hint="@string/password_hint"
-                                android:inputType="textPassword"
-                                android:maxLength="16"
-                                android:textColorHint="#B9B9B9"
-                                android:textSize="13sp" />
 
-                            <ImageButton
-                                android:id="@+id/ib_clean_psw"
-                                android:layout_width="15dp"
-                                android:layout_height="15dp"
-                                android:layout_marginRight="7dp"
-                                android:background="@drawable/ic_search_close"
-                                android:visibility="gone" />
-                        </LinearLayout>
-                    </LinearLayout>
-
-                    <TextView
-                        android:id="@+id/tv_forget_psw"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="right"
-                        android:layout_marginRight="20dp"
-                        android:layout_marginTop="5dp"
-                        android:text="忘记密码"
-                        android:textColor="@color/tran_black"
-                        android:textSize="12sp" />
-
-                </LinearLayout>
-            </com.whzl.mengbi.ui.widget.view.ShadowContainer>
-
-            <Button
-                android:id="@+id/btn_login"
-                android:layout_width="166dp"
-                android:layout_height="42dp"
-                android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true"
-                android:background="@drawable/selector_btn_yellow"
-                android:enabled="false"
-                android:text="登 录"
-                android:textColor="@color/black"
-                android:textSize="18sp" />
-        </RelativeLayout>
+        <Button
+            android:id="@+id/btn_login"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginLeft="27dp"
+            android:layout_marginRight="27dp"
+            android:layout_marginTop="41dp"
+            android:background="@drawable/selector_btn_yellow"
+            android:enabled="false"
+            android:text="登 录"
+            android:textColor="@color/black"
+            android:textSize="17sp" />
 
         <RadioGroup
             android:id="@+id/rg_env_switch"
@@ -202,25 +162,27 @@
         android:id="@+id/rl_icon_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+        android:layout_above="@id/ll_tips_login"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="30dp"
         android:background="@color/white">
 
         <ImageButton
             android:id="@+id/btn_qq_login"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="45.5dp"
+            android:layout_height="45.5dp"
             android:background="@null"
+            android:scaleType="fitXY"
             android:src="@drawable/ic_login_qq" />
 
         <ImageButton
             android:id="@+id/btn_wechat_login"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="45.5dp"
+            android:layout_height="45.5dp"
             android:layout_marginLeft="67dp"
             android:layout_toRightOf="@id/btn_qq_login"
             android:background="@null"
+            android:scaleType="fitXY"
             android:src="@drawable/ic_login_weixin" />
     </RelativeLayout>
 
@@ -237,7 +199,7 @@
             android:layout_centerHorizontal="true"
             android:text="其他方式登录"
             android:textColor="@color/tran_black5"
-            android:textSize="15dp" />
+            android:textSize="12dp" />
 
         <ImageView
             android:layout_width="wrap_content"
@@ -256,5 +218,31 @@
             android:src="@drawable/ic_login_other_right" />
 
     </RelativeLayout>
+
+    <LinearLayout
+        android:id="@+id/ll_tips_login"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="19dp"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="登录代表你已阅读并同意"
+            android:textColor="#cccccc"
+            android:textSize="12sp" />
+
+        <TextView
+            android:id="@+id/tv_xieyi_login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="《用户服务协议》"
+            android:textColor="#ffcf2d"
+            android:textSize="12sp" />
+    </LinearLayout>
+
 
 </RelativeLayout>
