--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,258 +1,202 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
         android:orientation="vertical">
 
-        <include layout="@layout/layout_title" />
+        <include layout="@layout/white_toolbar" />
+
+        <include layout="@layout/divider_shawdow_white" />
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="33dp"
+            android:layout_marginRight="42dp"
+            android:layout_marginTop="30dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/ic_login_phone" />
+
+
+            <EditText
+                android:id="@+id/et_phone"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="13dp"
+                android:layout_weight="1"
+                android:background="@null"
+                android:gravity="center_vertical"
+                android:hint="@string/phone_number_hint"
+                android:inputType="phone"
+                android:maxLength="13"
+                android:textColorHint="#30000000"
+                android:textSize="15sp" />
+
+            <ImageButton
+                android:id="@+id/ib_clean_phone"
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:background="@drawable/ic_search_close"
+                android:visibility="gone" />
+        </LinearLayout>
+
 
         <View
             android:layout_width="match_parent"
-            android:layout_height="6.5dp"
-            android:background="@drawable/view_space" />
+            android:layout_height="1dp"
+            android:layout_marginLeft="26.5dp"
+            android:layout_marginRight="28.5dp"
+            android:layout_marginTop="5dp"
+            android:background="#f0f0f0" />
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="30dp"
-            android:src="@drawable/login_logo" />
-
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="215dp"
-            android:layout_marginTop="30dp">
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="33dp"
+            android:layout_marginRight="42dp"
+            android:layout_marginTop="24dp"
+            android:orientation="horizontal">
 
-            <com.whzl.mengbi.ui.widget.view.ShadowContainer
+            <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                app:containerCornerRadius="20dp"
-                app:containerDeltaLength="5dp"
-                app:containerShadowColor="@color/font_color_53"
-                app:containerShadowRadius="5dp">
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/ic_login_code" />
 
-                <LinearLayout
-                    android:layout_width="300dp"
-                    android:layout_height="190dp"
-                    android:layout_centerHorizontal="true"
-                    android:background="@drawable/bg_login_round"
-                    android:orientation="vertical">
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="20dp"
-                        android:orientation="horizontal">
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="33dp"
-                            android:layout_gravity="center_vertical"
-                            android:src="@drawable/ic_login_number"/>
-
-                        <LinearLayout
-                            android:layout_width="207dp"
-                            android:layout_height="30dp"
-                            android:layout_marginLeft="10dp"
-                            android:layout_gravity="center_horizontal"
-                            android:background="@drawable/login_edit_text_bg"
-                            android:gravity="center_vertical"
-                            android:orientation="horizontal">
-
-                            <ImageView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginLeft="15dp"
-                                android:layout_gravity="center_vertical"
-                                android:src="@drawable/ic_login_red" />
-
-                            <EditText
-                                android:id="@+id/et_phone"
-                                android:layout_width="0dp"
-                                android:layout_weight="1"
-                                android:layout_height="match_parent"
-                                android:layout_marginLeft="10dp"
-                                android:background="@null"
-                                android:gravity="center_vertical"
-                                android:hint="@string/phone_number_hint"
-                                android:inputType="phone"
-                                android:maxLength="11"
-                                android:textColorHint="#B9B9B9"
-                                android:textSize="13sp" />
-
-                            <ImageButton
-                                android:id="@+id/ib_clean_phone"
-                                android:layout_width="15dp"
-                                android:layout_height="15dp"
-                                android:layout_marginRight="7dp"
-                                android:background="@drawable/ic_search_close"
-                                android:visibility="gone"/>
-                        </LinearLayout>
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="14dp"
-                        android:orientation="horizontal">
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="33dp"
-                            android:layout_gravity="center_vertical"
-                            android:src="@drawable/ic_login_code" />
-
-                        <LinearLayout
-                            android:layout_width="129dp"
-                            android:layout_height="30dp"
-                            android:layout_marginLeft="10dp"
-                            android:layout_gravity="center_horizontal"
-                            android:background="@drawable/login_edit_text_bg"
-                            android:gravity="center_vertical"
-                            android:orientation="horizontal">
-
-                            <ImageView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginLeft="15dp"
-                                android:layout_gravity="center_vertical"
-                                android:src="@drawable/ic_login_green"/>
-                            <EditText
-                                android:id="@+id/et_verify_code"
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:layout_marginLeft="10dp"
-                                android:layout_weight="1"
-                                android:background="@null"
-                                android:gravity="center_vertical"
-                                android:hint="@string/verify_code_hint"
-                                android:inputType="phone"
-                                android:maxLength="6"
-                                android:textColorHint="#B9B9B9"
-                                android:textSize="13sp" />
-                        </LinearLayout>
-
-                        <Button
-                            android:id="@+id/btn_get_verify_code"
-                            android:layout_width="70dp"
-                            android:layout_height="27dp"
-                            android:layout_marginLeft="7dp"
-                            android:layout_gravity="center_vertical"
-                            android:background="@drawable/selector_login_verify_code"
-                            android:text="@string/get_verify_code"
-                            android:textSize="11sp"
-                            android:textColor="#FEFEFE"/>
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="14dp"
-                        android:orientation="horizontal">
-
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="33dp"
-                            android:layout_gravity="center_vertical"
-                            android:src="@drawable/ic_login_psw" />
-
-                        <LinearLayout
-                            android:layout_width="207dp"
-                            android:layout_height="30dp"
-                            android:layout_marginLeft="10dp"
-                            android:layout_gravity="center_horizontal"
-                            android:background="@drawable/login_edit_text_bg"
-                            android:gravity="center_vertical"
-                            android:orientation="horizontal">
-
-                            <ImageView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginLeft="15dp"
-                                android:src="@drawable/ic_login_yellow" />
-
-                            <EditText
-                                android:id="@+id/et_password"
-                                android:layout_width="0dp"
-                                android:layout_weight="1"
-                                android:layout_height="match_parent"
-                                android:layout_gravity="center_vertical"
-                                android:layout_marginLeft="10dp"
-                                android:background="@null"
-                                android:hint="@string/password_hint"
-                                android:inputType="textPassword"
-                                android:maxLength="16"
-                                android:textColorHint="#B9B9B9"
-                                android:textSize="13sp" />
-
-                            <ImageButton
-                                android:id="@+id/ib_clean_psw"
-                                android:layout_width="15dp"
-                                android:layout_height="15dp"
-                                android:layout_marginRight="7dp"
-                                android:background="@drawable/ic_search_close"
-                                android:visibility="gone"/>
-                        </LinearLayout>
-                    </LinearLayout>
-                </LinearLayout>
-            </com.whzl.mengbi.ui.widget.view.ShadowContainer>
+            <EditText
+                android:id="@+id/et_verify_code"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="13dp"
+                android:layout_weight="1"
+                android:background="@null"
+                android:gravity="center_vertical"
+                android:hint="@string/verify_code_hint"
+                android:inputType="phone"
+                android:maxLength="6"
+                android:textColorHint="#30000000"
+                android:textSize="15sp" />
 
             <Button
-                android:id="@+id/btn_register"
-                android:layout_width="166dp"
-                android:layout_height="42dp"
-                android:layout_centerHorizontal="true"
-                android:layout_alignParentBottom="true"
-                android:background="@drawable/selector_btn_yellow"
-                android:enabled="false"
-                android:text="立即注册"
-                android:textColor="@color/black"
+                android:id="@+id/btn_get_verify_code"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="71dp"
+                android:layout_height="27dp"
+                android:layout_gravity="center_vertical"
+                android:background="@drawable/selector_code_login"
+                android:text="@string/get_verify_code"
+                android:textAllCaps="false"
+                android:textColor="#38ebeb"
+                android:textSize="10sp" />
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginLeft="26.5dp"
+            android:layout_marginRight="28.5dp"
+            android:layout_marginTop="5dp"
+            android:background="#f0f0f0" />
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="33dp"
+            android:layout_marginRight="42dp"
+            android:layout_marginTop="24dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/ic_login_psw" />
+
+
+            <EditText
+                android:id="@+id/et_password"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="13dp"
+                android:layout_weight="1"
+                android:background="@null"
+                android:hint="@string/password_hint"
+                android:maxLength="16"
+                android:textColorHint="#30000000"
                 android:textSize="15sp" />
-        </RelativeLayout>
+
+            <ImageView
+                android:id="@+id/ib_clean_psw"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/selector_login_clean_psw"
+                android:visibility="gone" />
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginLeft="26.5dp"
+            android:layout_marginRight="28.5dp"
+            android:layout_marginTop="5dp"
+            android:background="#f0f0f0" />
+
+        <Button
+            android:id="@+id/btn_register"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginLeft="26.5dp"
+            android:layout_marginRight="26.5dp"
+            android:layout_marginTop="34dp"
+            android:background="@drawable/selector_btn_yellow"
+            android:enabled="false"
+            android:text="注册"
+            android:textColor="@color/black"
+            android:textSize="17sp" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="20dp">
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal">
 
-            <CheckBox
-                android:id="@+id/cb_agree"
-                android:layout_width="15dp"
-                android:layout_height="15dp"
-                android:button="@null"
-                android:layout_gravity="center_vertical"
-                android:layout_marginRight="5dp"
-                android:background="@drawable/selector_login_check_box" />
 
             <TextView
                 android:id="@+id/tv_read"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="我已阅读并同意"
-                android:textSize="13sp"
                 android:layout_gravity="center_vertical"
-                android:textColor="@color/tran_black5"/>
+                android:text="注册代表你已阅读并同意"
+                android:textColor="#cccccc"
+                android:textSize="12sp" />
 
             <TextView
                 android:id="@+id/tv_agreement"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="《用户服务协议》"
                 android:layout_gravity="center_vertical"
-                android:textSize="13sp"
-                android:textColor="#ff2b3f"/>
+                android:text="《用户服务协议》"
+                android:textColor="#ffcf2d"
+                android:textSize="13sp" />
         </LinearLayout>
 
     </LinearLayout>
