--- a/app/src/main/res/layout/layout_live_load_foot.xml
+++ b/app/src/main/res/layout/layout_live_load_foot.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#00FF00">
+    android:layout_height="match_parent">
 
-    <TextView
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="top|center_horizontal"
-        android:layout_marginTop="20dp"
         android:gravity="center"
+        android:scaleType="centerCrop"
+        android:src="@drawable/img_switch_live"
         android:text="上拉加载下一个房间"
         android:textColor="#FFFFFF"
         android:textSize="18sp" />
